--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/pica": "^9.0.4",
     "aws-amplify": "^6.5.4",
     "dotenv": "^16.4.5",
     "next": "14.2.5",
+    "pica": "^9.0.1",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.3.0",
