--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/pica": "^9.0.4",
     "aws-amplify": "^6.5.4",
     "dotenv": "^16.4.5",
+    "mapbox-gl": "^3.6.0",
     "next": "14.2.5",
     "pica": "^9.0.1",
     "react": "^18",
@@ -21,6 +22,7 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@types/mapbox-gl": "^3.4.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
