--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^4.0.0",
     "@reduxjs/toolkit": "^2.2.7",
+    "@types/file-saver": "^2.0.7",
     "@types/pica": "^9.0.4",
     "aws-amplify": "^6.5.4",
     "dotenv": "^16.4.5",
-    "html2canvas": "^1.4.1",
-    "jspdf": "^2.5.2",
+    "file-saver": "^2.0.5",
     "mapbox-gl": "^3.6.0",
     "next": "14.2.5",
     "pica": "^9.0.1",
