--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "mapbox-gl": "^3.6.0",
-    "next": "14.2.5",
+    "next": "^14.2.16",
     "pica": "^9.0.1",
     "react": "^18",
     "react-dom": "^18",
