--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "@types/file-saver": "^2.0.7",
     "@types/pica": "^9.0.4",
     "aws-amplify": "^6.5.4",
-    "dotenv": "^16.4.5",
     "file-saver": "^2.0.5",
     "mapbox-gl": "^3.6.0",
     "next": "^14.2.16",
@@ -25,11 +24,13 @@
     "react-redux": "^9.1.2"
   },
   "devDependencies": {
+    "@aws-sdk/client-cognito-identity-provider": "^3.693.0",
     "@types/mapbox-gl": "^3.4.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "cypress": "^13.15.2",
+    "dotenv": "^16.4.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
