--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "create-testing-data": "npx ts-node ./scripts/createTestingData.ts",
+    "destroy-testing-data": "npx ts-node ./scripts/destroyTestingData.ts"
   },
   "dependencies": {
     "@react-pdf/renderer": "^4.0.0",
@@ -25,6 +27,8 @@
   },
   "devDependencies": {
     "@aws-sdk/client-cognito-identity-provider": "^3.693.0",
+    "@aws-sdk/client-dynamodb": "^3.693.0",
+    "@aws-sdk/lib-dynamodb": "^3.693.0",
     "@types/mapbox-gl": "^3.4.0",
     "@types/node": "^20",
     "@types/react": "^18",
@@ -33,6 +37,7 @@
     "dotenv": "^16.4.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
     "typescript": "^5"
   }
 }
